--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,14 +5,14 @@ spring:
     config:
       enabled: false
   datasource:
-    url=jdbc:mysql://localhost:3306/shopping_mall
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/user_service
+    username: root
+    password: root
+  jpa:
+    hibernate.ddl-auto: create
+    generate-ddl: true
+    show-sql: true
+
 server:
   port: 8400
-
-  spring.datasource.username=root
-  spring.datasource.password=root
-  spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-  spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
-  spring.jpa.generate-ddl=true
-  spring.jpa.hibernate.ddl-auto = update
-  spring.jpa.show-sql=true
