--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,9 @@
     </dependencyManagement>
 
     <build>
+        <finalName>
+            ${name}
+        </finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
