--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: user-service
   cloud:
     config:
-      enabled: false
+      uri: http://localhost:8888
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://vtsign.tech:3306/user_service
