--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -13,3 +13,9 @@ server:
       enabled: false
 springdoc:
   version: '1.0'
+tech:
+  vtsign:
+    hostname: http://localhost:8765
+    kafka:
+      user-service:
+        register: 'user-service-register'
